--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,3 +4,8 @@
   width: 100% !important;
   height: 600px !important;
 }
+.main-container {
+  background-image: url('/snow.jpg');
+  background-size: cover;
+  height: 600px;
+}
