--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,11 +1,5 @@
 <div class="container">
-  <div class=" d-flex flex-column text-center">
-    <h4>ようこそ雪山子へ</h4>
-    <p>こちらからログインしてください</p>
-  </div>
-  <div class="text-center">
-    <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-outline-primary mb-5 w-25"  %>
-    <%= link_to "ログイン", new_customer_session_path, class: "btn btn-md btn-outline-success mb-5 w-25" %>
-    <%= link_to "ゲストログイン", customers_guest_sign_in_path, class: "btn btn-md btn-outline-secondary mb-5 w-25", method: :post %>
+  <div class="main-container">
+    <h3 class="text-light text-center">ようこそ雪山子へ</h3>
   </div>
 </div>
