--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -50,7 +50,7 @@
         </table>
 
         <% if @post.customer == current_customer %>
-          <%= link_to "編集する", edit_post_path(@post), class:"btn btn-success mr-5 ml-5" %><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %>
+          <%= link_to "編集する", edit_post_path(@post.id), class:"btn btn-success mr-5 ml-7" %><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %>
         <% end %>
 
       </div>
