--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -17,31 +17,30 @@
        <% @posts.each do |posted| %>
          <div class="col-12 col-md-6 col-lg-4">
            <div class="card">
-
-          <div class="swiper-container">
-            <div class= "swiper-wrapper img-index">
-            <% if posted.images.attached? %>
-              <% if posted.images.length < 2 %>
-                <% posted.images.each do |image| %>
-                  <%= image_tag image, class: "post-img"%>
-                <% end %>
-              <% else %>
+            <div class="swiper-container">
+              <% if posted.images.attached? %>
+                <% if posted.images.length < 2 %>
+                  <% posted.images.each do |image| %>
+                    <%= image_tag image, class: "post-img"%>
+                  <% end %>
+                <% else %>
+                  <div class= "swiper-wrapper img-index">
                     <% posted.images.each do |image| %>
                       <div class="swiper-slide">
-                        <%= image_tag image, class: " index-img PostSwipe" %>
+                        <%= image_tag image, class: " index-img " %>
                       </div>
                     <% end %>
-                  <div class="swiper-button-prev swiper-button-white"></div>
-                  <div class="swiper-button-next swiper-button-white"></div>
-                  <div class="swiper-pagination"></div>
+                  </div>
+                  <div class="swiper-pagination swiper-pagination-white"></div>
+                  <div class="swiper-button-prev"></div>
+                  <div class="swiper-button-next"></div>
+                <% end %>
+              <% else %>
+                <div class="swiper-slide">
+                  <img src="/assets/no_image.jpg">
+                </div>
               <% end %>
-            <% else %>
-              <div class="swiper-slide">
-                <img src="/assets/no_image.jpg">
-              </div>
-            <% end %>
             </div>
-          </div>
 
 
                <div class="card-body">
