--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -4,13 +4,15 @@
         <% if @post.images.attached? %>
             <div class="swiper-container">
               <div class= "swiper-wrapper img-index">
-                <% @post.images.each do |image| %>
-                  <%= image_tag image, class: "swiper-slide index-img swpeImg" %>
-                <% end %>
+                <div class="swiper-slide">
+                  <% @post.images.each do |image| %>
+                    <%= image_tag image, class: " index-img " %>
+                  <% end %>
+                </div>
               </div>
-              <div class="swiper-button-prev swiper-button-white"></div>
-              <div class="swiper-button-next swiper-button-white"></div>
-              <div class="swiper-pagination"></div>
+            <div class="swiper-pagination swiper-pagination-white"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
             </div>
         <% end %>
 
