--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -23,6 +23,9 @@
             <%= f.file_field :images, multiple: true  %>
             </td>
           </tr>
+          <tr>
+            <td><div id="previews"></div></td>
+          </tr>
 
           <tr>
             <td>
