--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -37,7 +37,7 @@
                 <% end %>
               <% else %>
                 <div class="swiper-slide">
-                  <img-url src="/assets/no_image.jpg">
+                  <image-url src="/assets/no_image.jpg">
                 </div>
               <% end %>
             </div>
