--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -31,7 +31,7 @@
 }
 
 .main-container {
-  background-image: imageurl('/snow.jpg');
+  background-image: image-url('/snow.jpg');
   background-size: cover;
   height: 600px;
 }
