--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -40,9 +40,9 @@ html {
 
 body {
   /* フッタと同じ高さに設定 */
-  margin-bottom: 60px;
+//   margin-bottom: 60px;
 
-  /* 一番下までスクロールした時の余白 */
-  padding-bottom: 0;
-}
+//   /* 一番下までスクロールした時の余白 */
+//   padding-bottom: 0;
+ }
 
