--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header class="border-bottom border-dark mb-2"><%= render 'layouts/header', customer: current_customer %></header>
       <main><%= yield %></main>
-      <footer class="border-top border-dark bg-dark mt-2"></footer>
+      <footer class="border-top border-dark bg-dark mt-2">雪山子</footer>
     </div>
 
     <!--swiperの記述-->
