--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -16,7 +16,7 @@
      <div class="row">
        <% @posts.each do |posted| %>
          <div class="col-12 col-md-6 col-lg-4">
-           <div class="card">
+           <div class="card m-3">
             <div class="swiper-container">
               <% if posted.images.attached? %>
                 <% if posted.images.length < 2 %>
