--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,4 @@
 <div class="container">
-  <div class="main-container">
-    <h3 class="text-light text-center">ようこそ雪山子へ</h3>
+  <div class="c-bnr bg">
   </div>
 </div>
