--- a/app/views/public/ski_resorts/show.html.erb
+++ b/app/views/public/ski_resorts/show.html.erb
@@ -3,12 +3,14 @@
   <div class="swiper-container">
     <div class= "swiper-wrapper img-index">
       <% @ski_resort.ski_resort_images.each do |image| %>
-        <%= image_tag image, class: "swiper-slide index-img swpeImg" %>
+        <div class="swiper-slide">
+          <%= image_tag image, class: " index-img " %>
+        </div>
       <% end %>
     </div>
-    <div class="swiper-button-prev swiper-button-white"></div>
-    <div class="swiper-button-next swiper-button-white"></div>
-    <div class="swiper-pagination"></div>
+      <div class="swiper-pagination swiper-pagination-white"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
   </div>
 <% end %>
 
