[Update]index-layout

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,9 +1,5 @@
 @use '~bootstrap/scss/bootstrap';
 
-
-
-
-
 //top 画面のcss
 .c-bnr {
   background-image: url("/snow.jpg");
@@ -52,12 +48,38 @@
 
 //ヘッダーのボタン
 .c-btn.press {
-  box-shadow: 0 4px 0 #ffffff; // ボタンの影
+  box-shadow: 0 4px 0 #C0C0C0; // ボタンの影
 }
 .c-btn.press:hover {
   transform: translateY(4px);
   box-shadow: none;
 }
+
+//ソート機能ボタン
+.c-btns {
+  background: #000000;
+  border: 2px solid #000000;
+  border-radius: 60px;
+  color: #fff;
+  display: block;
+  font-weight: bold;
+  max-width: 300px;
+  padding: 15px 40px;
+  text-align: center;
+}
+
+.c-btns.press {
+  box-shadow: 0 4px 0 #C0C0C0; // ボタンの影
+}
+.c-btns.press:hover {
+  transform: translateY(4px);
+  box-shadow: none;
+}
+
+.link {
+  color: #ffffff;
+}
+
 
 //swiperのcss
 .swiper-container {
